--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   adaptive_screen_utils: ^2.4.0
   go_router: ^16.3.0
   lottie: ^3.3.2
+  http: 
 
 dev_dependencies:
   flutter_test:
